# rdo-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SESSION_LOG_AUTONOMOUS.md  pyproject.toml
docs/: ADR-001-transcription-model-selection.md  ADR-002-classifications-table-schema.md  ADR-003-classifications-multi-source-schema.md  ADR-004-markdown-rendering-laudo.md  ADR-005-numeracao-sessoes-pos-v1.md  ADR-006-tabela-events-status.md  ADR-007-state-machine.md  ADR-008-classify-three-tier.md  ADR-009-vision-cascade.md  ADR-010-correlator-parallel.md  ADR-011-narrator-hierarchy.md  ADR-012-narrative-cache-binary.md  Blueprint_V1_Agente_Forense_RDO.docx  Blueprint_V2_Agente_Forense_RDO.docx  Blueprint_V3_Agente_Forense_RDO.docx  PROJECT_CONTEXT.md  SPRINT2_BACKLOG.md  SPRINT2_PHASE2_RETROSPECTIVE.md  SPRINT2_PHASES_2_3_E2E_RETROSPECTIVE.md  SPRINT2_PLAN.md  SPRINT3_PLAN.md  SPRINT3_RESULTS.md  SPRINT3_REVIEW_WORKFLOW.md
docs/audits/: AUDIT_2026-04-25_state_of_roadmap.md
docs/brand/: INTEGRATION_PLAN.md  design-system.html  showcase.html
docs/brand/design-skill/: README.md  SKILL.md
docs/brand/docs/: Vestigio-Deck-Template.pptx  Vestigio-Letterhead.docx
docs/ground_truth/: EVERALDO_SANTAQUITERIA.yml
docs/runbooks/: SESSAO_11_RUNBOOK.md
docs/sessions/: SESSION_LOG_AUTONOMOUS_2026-04-20.md  SESSION_LOG_AUTONOMOUS_V2.md  SESSION_LOG_SESSAO_10_SCALE.md  SESSION_LOG_SESSAO_1_POLIMENTO_GT.md  SESSION_LOG_SESSAO_2_FASE_D_E.md  SESSION_LOG_SESSAO_3_8_MARKDOWN_FIX.md  SESSION_LOG_SESSAO_3_LAUDO.md  SESSION_LOG_SESSAO_5_NARRATOR.md  SESSION_LOG_SESSAO_6_RESILIENCIA.md  SESSION_LOG_SESSAO_7_INGESTION.md  SESSION_LOG_SESSAO_8_EFFICIENT_TEXT.md  SESSION_LOG_SESSAO_9_EFFICIENT_VISUAL.md  SESSION_LOG_SPRINT4_OP10_OP11.md  SESSION_LOG_SPRINT4_OP8.md  SESSION_LOG_SPRINT4_OP9.md  SESSION_LOG_SPRINT5_FASE_A.md  SESSION_LOG_SPRINT5_FASE_B.md  TAGS_HISTORICO.md
reports/narratives/EVERALDO_SANTAQUITERIA/: day_2026-04-06.md  day_2026-04-08.md  day_2026-04-10.md  day_2026-04-14.md  day_2026-04-15.md  day_2026-04-16.md  obra_overview.md
scripts/: backfill_superseded_by.py  capture_vision_fixture.py  capture_whisper_fixture.py  compare_vision_v1_v2.py  extract_video_frames.py  generate_rdo_piloto.py  measure_vision_accuracy.py  reprocess_visual_analyses_ocr_first.py  retry_failed_ocr.py  run_phase2_e2e.py  run_phase3_e2e.py
src/rdo_agent/: __init__.py  cli.py
src/rdo_agent/classifier/: batch.py  cache.py  human_reviewer.py  jaccard_dedup.py  quality_detector.py  semantic_classifier.py  text_message_ingestor.py
src/rdo_agent/document_extractor/: __init__.py
src/rdo_agent/extractor/: __init__.py
src/rdo_agent/financial_ocr/: __init__.py
src/rdo_agent/forensic_agent/: __init__.py  correlator.py  dossier_builder.py  hierarchy.py  narrative_cache.py  narrator.py  parallel.py  persistence.py  prompts.py  text_utils.py  types.py  validator.py
src/rdo_agent/ground_truth/: __init__.py  loader.py  (+1 more)
tests/: conftest.py  test_archive_move_style.py  test_batch_classifier.py  test_classifier_human_reviewer.py  test_classifier_quality_detector.py  test_classifier_semantic.py  test_classify_cache_and_jaccard.py  test_cli_export_laudo.py  test_cli_extract_gt.py  test_cli_narrate.py  test_config.py  test_correlator_integration.py  test_correlator_skeleton.py  test_dedup_content_hash.py  test_detector_contract_renegotiation.py  test_detector_math.py  test_detector_semantic.py  test_detector_temporal.py  test_document_extractor.py  test_dossier_builder.py  test_extractor.py  test_financial_ocr.py  test_financial_records_schema.py  test_generate_rdo_piloto.py  test_generate_rdo_with_financial.py  test_ground_truth_loader.py  test_gt_extractor.py  test_hashing.py  test_ingestor.py  test_laudo_adapter.py  test_laudo_pdf_validation.py  test_math_detector_units.py  test_media_source.py  test_narrative_cache.py  test_narrator.py  test_narrator_hierarchy.py  test_narrator_max_tokens.py  test_narrator_persistence.py  test_narrator_streaming.py  test_narrator_validator.py  (+25 more)
tests/fixtures/: sample_chat_bracket.txt  sample_chat_dash.txt  vision_golden_response.json  whisper_golden_response.json
(+78 files in other folders)
