[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdo-agent"
version = "1.2.0"
description = "Agente Forense de RDO — Sistema multi-agente para geração de Relatórios Diários de Obra"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Lucas Ferreira Leite", email = "lucas@valenobre.com.br" }
]
license = { text = "Proprietary" }

dependencies = [
    # Core
    "python-dateutil>=2.8.2",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",

    # Metadata extraction
    "pymediainfo>=6.1.0",
    "pillow>=10.0",

    # Task scheduling
    "apscheduler>=3.10.0",

    # APIs (para sprints 2+)
    "openai>=1.30",
    "anthropic>=0.18.0",

    # Document extraction (Sprint 2 §Fase 1)
    "pdfplumber>=0.11",

    # Opentimestamps
    "opentimestamps-client>=0.7.0",

    # PDF generation (Sprint 3 §Fase 4; bumpada em v1.0 pra Vestigio Laudo)
    "weasyprint>=68.0",

    # Ground Truth YAML (Sprint 5 Fase C)
    "pyyaml>=6.0",

    # Vestigio Laudo Generator (Sessao 3 — v1.0-vestigio-integrated)
    "jinja2>=3.0",

    # Markdown -> HTML nas narrativas do laudo (Fase 3.8 — dívida #38)
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "ipython>=8.18.0",
    # Geração de PDFs sintéticos para fixtures (Sprint 2 §Fase 1)
    "reportlab>=4.0",
    # Extração tolerante de texto de laudos Vestígio para validação
    # (Sessão 4 / dívida #37). Não substitui pdfplumber em
    # document_extractor — pyMuPDF é apenas a convenção para testes
    # de validação de PDFs gerados (laudo).
    "pymupdf>=1.24",
]

[project.scripts]
rdo-agent = "rdo_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
extend-ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
